samples/_failures_safe/1761651568_84da59_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_69a7bb23.c: In function ‘main’:
./samples/SAFE/__tmp_69a7bb23.c:140:5: error: expected expression at end of input
  140 |     if (mat2.data == NULL)
      |     ^~
./samples/SAFE/__tmp_69a7bb23.c:140:5: error: expected declaration or statement at end of input
